--- a/courses/templates/subject/update.html
+++ b/courses/templates/subject/update.html
@@ -17,8 +17,7 @@
         </div>
         {% endfor %}
         <div class="col-lg-offset-4 col-lg-4">
-          <button type="submite" class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Create' %}</button>
-
+          <button type="submite" class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Update' %}</button>
         </div>
       </form>
     </div>
