modified header to accept notifications and created notification system, stil has bugs from Python 2.7 implementation on inheritance, had to duplicate code

--- a/core/static/css/base/header.css
+++ b/core/static/css/base/header.css
@@ -13,10 +13,19 @@
 	margin-left: 30%;
 }
 
-/* ID */
+.link{
+	transition-duration: 0.5s; /*Slow down the transformation*/
+}
+
+.link:hover{
+	transform:scale(1.1);
+}
 
 .notifications{
 	font-size: 20px;
 
 }
+
+/* ID */
+
 
