--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,6 +30,7 @@
 	<script>
     	$.material.init();
     </script>
+    <script src="{% static 'js/base/header.js'%}"></script>
 	<!--Javascript block for specific-app ones -->
 	{% block javascript %}
 
@@ -51,16 +52,55 @@
               		</div>
               		<div class="navbar-collapse collapse navbar-responsive-collapse">
                 		<ul class="nav navbar-nav navbar-right notifications">
-                  			<li> <a href="#"><i class="fa fa-bell-o" aria-hidden="true"></i></a> </li>
-                  			<li> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-                  			<li> <a href="{% url 'users:profile' %}">{{ user }}</a></li>
-                  			<li> <a href="{% url 'core:logout' %}">{% trans 'Log out' %}</a></li>
+                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
+			                    <a href="../user/profile_user.html" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o" aria-hidden="true"></i></a>
+			                     <ul class="dropdown-menu">
+			                     <li class="dropdown-header">Notifications</li>
+			                     	{% for notification in notifications  %}
+			                     		{% if notification.actor %} <!-- if the notification has a user-->
+			                     			<li>
+					                          <a><div class="list-group-item">
+					                          <div class="row-picture">
+					                            <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
+					                            <div class="least-content pull-right">{{ notification.datetime }}</div>
+					                          </div>
+					                          <div class="row-content">
+					                            <p class="list-group-item-text">{{ notification.message }}</p>
+					                          </div>
+					                          </div>
+					                          </a>
+					                        </li>
+			                     		{% else %}
+			                     			 <li>
+					                            <a>
+					                                <div class="list-group-item">
+					                                  <div class="row-action-primary">
+					                                    <i class="material-icons">folder</i>
+					                                  </div>
+					                                  <div class="row-content">
+					                                    
+					                                    <div class="least-content pull-right">{{ notification.datetime }}</div>
+
+					                                    <p class="list-group-item-text">{{ notification.message }}</p>
+					                                </div>
+					                             </a>
+			                        		</li>
+			                     		{% endif %}
+			                     	{% endfor %}
+
+			                     	<div> <p>See more</p> </div>
+			                      </ul>
+			                 </li>
+
+                  			<li class="link" data-toggle="tooltip" data-placement="bottom" title data-original-title="messages"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
+                  			<li class="link"> <a href="{% url 'users:profile' %}">{{ user }}</a></li>
+                  			<li class="link"> <a href="{% url 'core:logout' %}">{% trans 'Log out' %}</a></li>
                 		</ul>
               		</div>
             	</div>
         	</div>
     	</div>
-    	</div>
+    </div>
 	{% endblock %}
 
     <div class="container-fluid">
