--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -17,7 +17,7 @@
 	  	<a href="{% url 'course:view' course.slug %}" class="list-group-item active">
 	    	{% trans 'Course Info' %}
 	  	</a>
-	  	<a href="{% url 'course:manage_mods' course.slug %}" class="list-group-item">
+	  	<a href="" class="list-group-item">
 	    	{% trans 'Manage Modules' %}
 	  	</a>
 	  	{% if user|has_role:'professor, system_admin' %}
