--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -15,7 +15,7 @@
 		<a href="{% url 'users:profile' %}" class="list-group-item active">
 	    	{% trans 'Profile' %}
 	  	</a>
-	  	<a href="{% url 'users:edit_profile' %}" class="list-group-item">
+	  	<a href="{% url 'users:edit_profile' user.id %}" class="list-group-item">
 	    	{% trans 'Edit Profile' %}
 	  	</a>
 	</div>
