--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -27,6 +27,16 @@
 
 {% block content %}
 	<h3>{% trans 'Notifications' %}</h3>
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <p>{{ message }}</p>
+        </div>
+      {% endfor %}
+    {% endif %}
     <div class="panel panel-default">
       	<div class="panel-body">
         	His course has notified a new activity!
