--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -23,27 +23,107 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-sm-3">
-			<img src="{{ user.image.url }}" class="img-responsive" />
+		<div class="row">
+		<div class="col-lg-offset-4 col-lg-2">
+			<img src="" class="img-responsive center-block " alt="logo amadeus">
 		</div>
-		<div class="col-sm-9">
-			<h4>{{ user }}</h4>
-			<span class="label label-info">{% if user.type_profile %}{{ user.get_type_profile_display }}{% else %}
-			{% trans 'Administrator' %} {% endif %}</span>
-			<span class="label label-primary">{{ user.get_gender_display }}</span>
-			<span class="label label-warning">{{ user.city }} / {{ user.state }}</span>
-			<p>
-				<strong>{% trans 'Mail:' %} </strong> {{ user.email }}
-			</p>
-			<p>
-				<strong>{% trans 'Phone:' %} </strong> {{ user.phone }}
-			</p>
-			<p>
-				<strong>{% trans 'Cpf' %}: </strong> {{ user.cpf }}
-			</p>
-			<p>
-				<strong>{% trans 'Birth date' %}: </strong> {{ user.birth_date }}
-			</p>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="card">
+				<div class="card-content">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-md-4">
+								<img src="{{ user.image.url }}" class="img-responsive center-block img-circle" alt="foto perfil" style="max-height:174px">
+							</div>
+							<div class="col-md-8">
+								<table class="table table-hover table-edited">
+									<tbody>
+										<tr>
+											<td>Status:</td>
+											<td>Offline</td>
+										</tr>
+										<tr>
+											<td>Nome:</td>
+											<td>{{user}}</td>
+										</tr>
+										<tr>
+											<td>Login:</td>
+											<td>{{user.username}}</td>
+										</tr>
+										<tr>
+											<td>Email:</td>
+											<td>{{user.email}}</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-10 col-md-offset-1">
+								<table class="table table-hover table-edited">
+									<tbody>
+										<tr>
+											<td>Tipo de usuário:</td>
+											<td>{{use.type_profile}}</td>
+										</tr>
+										<tr>
+											<td>CPF:</td>
+											<td>{{user.cpf}}</td>
+										</tr>
+										<tr>
+											<td>Número de telefone:</td>
+											<td>{{user.phone}}</td>
+										</tr>
+										<tr>
+											<td>Sexo:</td>
+											<td>{{user.gender}}</td>
+										</tr>
+										<tr>
+											<td>Data de Nascimento:</td>
+											<td>{{user.birth_date}}</td>
+										</tr>
+										<tr>
+											<td>Estado e Cidade:</td>
+											<td>{{user.state}} - {{user.city}}</td>
+										</tr>
+										<tr>
+											<td>Titulação:</td>
+											<td>Mestrado</td>
+										</tr>
+										<tr>
+											<td>Ano:</td>
+											<td>2012</td>
+										</tr>
+										<tr>
+											<td>Instituição:</td>
+											<td>UFPE</td>
+										</tr>
+										<tr>
+											<td>Currículo:</td>
+											<td>-</td>
+										</tr>	
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<footer class="card-footer">
+					<div class="col-md-6">
+						<button class="btn btn-flat">Edit Profile</button>
+					</div>
+					<div class="col-md-6">
+						<button class="btn btn-flat btn-danger pull-right">Delete Account</button>
+					</div>
+				</footer>
+
+			</div>
+
+
 		</div>
+	</div>
+</div>
 	</div>
 {% endblock %}
