Subscribe base divider breadcumbs #25

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -44,3 +44,8 @@ h5{
     margin-top: 2em;
     margin-bottom: 2em;
 }
+
+/*========= Subscrib default divide breadcrumb*/
+.divider{
+    display: none;
+}
