--- a/app/templates/home_professor.html
+++ b/app/templates/home_professor.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% load i18n %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-  <ol class="breadcrumb">
-      <li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-  </ol>
+
+  {% clear_breadcrumbs %}
+  {% breadcrumb 'Home' '/' %}
+
+{% endblock %}
+
+{% block render_breadcrumbs %}
+  {% render_breadcrumbs %}
 {% endblock %}
 
 {% block sidebar %}
