Adding block breadcrumbs and render_breadcrumbs to base template  #25

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -107,6 +107,10 @@
     	{% block breadcrumbs %}
 
     	{% endblock %}
+    	
+    	{% block render_breadcrumbs %}
+
+    	{% endblock %}
     	<div class="row">
     		<div class="col-md-3 col-sm-3">
 				{% block sidebar %}
