Adding breadcrumbs to courses #25

--- a/app/templates/home_professor.html
+++ b/app/templates/home_professor.html
@@ -6,7 +6,7 @@
 {% block breadcrumbs %}
 
   {% clear_breadcrumbs %}
-  {% breadcrumb 'Home' '/' %}
+  {% breadcrumb 'Home' 'app:index' %}
 
 {% endblock %}
 
