--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -37,95 +37,110 @@
 	{% endblock %}
 </head>
 <body>
-	{% block nav %}
 	<div class="container-fluid">
+		{% block nav %}
+			<div class="row">
+				<div class="container-fluid">
+					<div class="row">
+			        	<div class="navbar navbar-default">
+			            	<div class="container-fluid">
+			              		<div class="navbar-header">
+			                		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+			                  			<span class="icon-bar"></span>
+			                  			<span class="icon-bar"></span>
+			                  			<span class="icon-bar"></span>
+			                		</button>
+			                		<a class="navbar-brand" href="javascript:void(0)"><img class="logo" src="{% static 'img/topo-amadeus.png'  %}" alt="Logo"/></a>
+			              		</div>
+			              		<div class="navbar-collapse collapse navbar-responsive-collapse">
+			                		<ul class="nav navbar-nav navbar-right notifications">
+			                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
+						                    <a href="../user/profile_user.html" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o" aria-hidden="true"></i></a>
+						                     <ul class="dropdown-menu">
+						                     <li class="dropdown-header">Notifications</li>
+						                     	{% for notification in notifications  %}
+						                     		{% if notification.actor %} <!-- if the notification has a user-->
+						                     			<li>
+								                          <a href="{{ notification.action_resource.resource.link }}"><div class="list-group-item">
+								                          <div class="row-picture">
+								                            <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
+								                            <div class="least-content pull-right">{{ notification.datetime }}</div>
+								                          </div>
+								                          <div class="row-content">
+								                            <p class="list-group-item-text">{{ notification.message }}</p>
+								                          </div>
+								                          </div>
+								                          </a>
+								                        </li>
+						                     		{% else %}
+						                     			 <li>
+								                            <a href="{{ notification.action_resource.resource.link }}">
+								                                <div class="list-group-item">
+								                                  <div class="row-action-primary">
+								                                    <i class="material-icons">folder</i>
+								                                  </div>
+								                                  <div class="row-content">
+								                                    
+								                                    <div class="least-content pull-right">{{ notification.datetime }}</div>
+
+								                                    <p class="list-group-item-text">{{ notification.message }}</p>
+								                                </div>
+								                             </a>
+						                        		</li>
+						                     		{% endif %}
+						                     	{% endfor %}
+
+						                     	<div> <p>See more</p> </div>
+						                      </ul>
+						                 </li>
+
+			                  			<li class="link" data-toggle="tooltip" data-placement="bottom" title data-original-title="messages"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
+			                  			<li class="link"> <a href="{% url 'users:profile' %}">{{ user }}</a></li>
+			                  			<li class="link"> <a href="{% url 'core:logout' %}">{% trans 'Log out' %}</a></li>
+			                		</ul>
+			              		</div>
+			            	</div>
+			        	</div>
+			    	</div>
+			    </div>
+			</div>
+		{% endblock %}
+
 		<div class="row">
-        	<div class="navbar navbar-default">
-            	<div class="container-fluid">
-              		<div class="navbar-header">
-                		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                  			<span class="icon-bar"></span>
-                  			<span class="icon-bar"></span>
-                  			<span class="icon-bar"></span>
-                		</button>
-                		<a class="navbar-brand" href="javascript:void(0)"><img class="logo" src="{% static 'img/topo-amadeus.png'  %}" alt="Logo"/></a>
-              		</div>
-              		<div class="navbar-collapse collapse navbar-responsive-collapse">
-                		<ul class="nav navbar-nav navbar-right notifications">
-                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
-			                    <a href="../user/profile_user.html" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o" aria-hidden="true"></i></a>
-			                     <ul class="dropdown-menu">
-			                     <li class="dropdown-header">Notifications</li>
-			                     	{% for notification in notifications  %}
-			                     		{% if notification.actor %} <!-- if the notification has a user-->
-			                     			<li>
-					                          <a href="{{ notification.action_resource.resource.link }}"><div class="list-group-item">
-					                          <div class="row-picture">
-					                            <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
-					                            <div class="least-content pull-right">{{ notification.datetime }}</div>
-					                          </div>
-					                          <div class="row-content">
-					                            <p class="list-group-item-text">{{ notification.message }}</p>
-					                          </div>
-					                          </div>
-					                          </a>
-					                        </li>
-			                     		{% else %}
-			                     			 <li>
-					                            <a href="{{ notification.action_resource.resource.link }}">
-					                                <div class="list-group-item">
-					                                  <div class="row-action-primary">
-					                                    <i class="material-icons">folder</i>
-					                                  </div>
-					                                  <div class="row-content">
-					                                    
-					                                    <div class="least-content pull-right">{{ notification.datetime }}</div>
+		    <div class="container-fluid">
+		    	<div class="row">
+		    		<div class="col-xs-* col-sm-* col-md-2">
+						{% block sidebar %}
 
-					                                    <p class="list-group-item-text">{{ notification.message }}</p>
-					                                </div>
-					                             </a>
-			                        		</li>
-			                     		{% endif %}
-			                     	{% endfor %}
+						{% endblock %}
+		    		</div>
 
-			                     	<div> <p>See more</p> </div>
-			                      </ul>
-			                 </li>
+		    		<div class="col-xs-* col-sm-* col-md-10">
+				    	{% block breadcrumbs %}
 
-                  			<li class="link" data-toggle="tooltip" data-placement="bottom" title data-original-title="messages"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-                  			<li class="link"> <a href="{% url 'users:profile' %}">{{ user }}</a></li>
-                  			<li class="link"> <a href="{% url 'core:logout' %}">{% trans 'Log out' %}</a></li>
-                		</ul>
-              		</div>
-            	</div>
-        	</div>
-    	</div>
-    </div>
-	{% endblock %}
+				    	{% endblock %}
+				    	
+				    	{% block render_breadcrumbs %}
 
-    <div class="container-fluid">
-    	{% block breadcrumbs %}
+				    	{% endblock %}
 
-    	{% endblock %}
-    	
-    	{% block render_breadcrumbs %}
+				    	<div class="row">
+				    		<div class="container-fluid">
+				    			<div class="col-xs-* col-sm-* col-md-8">
+									{% block content %}
 
-    	{% endblock %}
-    	<div class="row">
-    		<div class="col-md-3 col-sm-3">
-				{% block sidebar %}
+									{% endblock %}
+				    			</div>
 
-				{% endblock %}
-			</div>
-			<div class="col-md-6 col-sm-6">
-				{% block content %}
+				    			<div class="col-xs-* col-sm-* col-md-4">
+									{% block rightbar %}
 
-				{% endblock %}
-			</div>
-			<div class="col-md-3 col-sm-3">
-				{% block rightbar %}
-
-				{% endblock rightbar %}
+									{% endblock rightbar %}
+				    			</div>
+				    		</div>
+				    	</div>
+		    		</div>
+				</div>
 			</div>
 		</div>
 	</div>
