Fixing bug of showing 'loading' everytime [Issue: #45]

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -108,7 +108,7 @@
 	<div id="timeline">
 		{% include page_template %}
 	</div>
-	<div id="loading" class="alert alert-primary" role="alert">
+	<div id="loading" class="alert alert-primary" role="alert" style="display: none">
 		<center>
 			<span class="fa fa-spin fa-circle-o-notch"></span>
 		</center>
