--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -103,11 +103,18 @@
 {% block content %}
 	{% if user|has_role:'system_admin' %}
 		<h3>{% trans 'Courses' %}</h3>
-	{% endif %}
 
-	<div id="timeline">
-		{% include page_template %}
-	</div>
+		<div id="timeline">
+			{% include page_template %}
+		</div>
+	{% else %}
+		<ul class="timeline" style="-webkit-padding-start: 0px">
+			<div id="timeline">
+				{% include page_template %}
+			</div>
+		</ul>
+	{% endif %}
+	
 	<div id="loading" class="alert alert-primary" role="alert" style="display: none">
 		<center>
 			<span class="fa fa-spin fa-circle-o-notch"></span>
