--- a/app/templates/home_admin_content.html
+++ b/app/templates/home_admin_content.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% for course in courses %}
+{% for course in objects %}
     <div class="panel panel-default courseHome">
       	<div class="panel-body">
         	<p>{{ course }}</p>
