--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -53,7 +53,7 @@
 			              		<div class="navbar-collapse collapse navbar-responsive-collapse">
 			                		<ul class="nav navbar-nav navbar-right notifications">
 			                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
-						                    <a  class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o" aria-hidden="true"></i></a>
+						                   <a  class="dropdown-toggle" data-toggle="dropdown"> <span class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell-o" aria-hidden="true"></i></a>
 						                     <ul class="dropdown-menu">
 						                     <li class="dropdown-header">Notifications</li>
 						                     	{% for notification in notifications  %}
