--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -1,7 +1,11 @@
-{% extends 'course/index.html' %}
+{% extends 'base.html' %}
 
 {% load static i18n permission_tags %}
 {% load django_bootstrap_breadcrumbs %}
+
+{% block style %}
+  <link rel="stylesheet" href="{% static 'css/course/course.css' %}">
+{% endblock style %}
 
 {% block breadcrumbs %}
 
@@ -10,104 +14,81 @@
 
 {% endblock %}
 
-
 {% block sidebar %}
-
-{{block.super}}
-<div class="row">
-	<div class="col-md-12">
-        <div class="panel panel-primary navigation">
-          <div class="panel-heading">
-            <h5>{% trans 'Subjects' %}</h5>
-          </div>
-          <div class="panel-body">
-            <ul class="nav nav-pills nav-stacked">
-	            {% for subject in subjects %}
-	            	<li><a href="">{{subject.name}}</a></li>
-	            {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
+<div class="panel panel-primary navigation">
+  <div class="panel-heading">
+    <h5>{% trans "Menu" %}</h5>
+  </div>
+  <div class="panel-body">
+    <ul class="nav nav-pills nav-stacked">
+      <li><a href="{% url 'app:index' %}">{% trans "Home" %}</a></li>
+      <li><a href="{% url 'users:profile' %}">{% trans "Profile" %}</a></li>
+      {# <li><a href="">{% trans "Courses" %}</a></li>#}
+    </ul>
+  </div>
 </div>
-<!--<div class="list-group">
-	  	<a href="{% url 'course:manage' %}" class="list-group-item">
-	    	{% trans 'Courses' %}
-	  	</a>
-	  	<a href="{% url 'course:view' course.slug %}" class="list-group-item active">
-	    	{% trans 'Course Info' %}
-	  	</a>
-	  	<a href="" class="list-group-item">
-	    	{% trans 'Manage Modules' %}
-	  	</a>
-	  	{% if user|has_role:'professor, system_admin' %}
-		  	<a href="{% url 'course:create' %}" class="list-group-item">
-		    	{% trans 'Create Course' %}
-		  	</a>
-		  	<a href="{% url 'course:update' course.slug %}" class="list-group-item">
-		    	{% trans 'Edit Course' %}
-		  	</a>
-		  	<a href="#" class="list-group-item">
-		    	{% trans 'Participants' %}
-		  	</a>
-			<a href="" class="list-group-item">
-		    	{% trans 'Course avaliations' %}
-		  	</a>
-			<a href="" class="list-group-item">
-		    	{% trans 'Duplicate Course' %}
-		  	</a>
-		  	<a href="{% url 'course:delete' course.slug %}" class="list-group-item">
-		    	{% trans 'Delete Course' %}
-		  	</a>
-		{% endif %}
-	</div> -->
+{% if courses.count > 0 %}
+<div class="panel panel-primary navigation">
+  <div class="panel-heading">
+    <h5>{% trans "Courses" %}</h5>
+  </div>
+  <div class="panel-body">
+    <ul class="nav nav-pills nav-stacked">
+      {% for course in courses %}
+          <li><a href="{% url 'course:view' course.slug %}">{{course}}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
+{% endif %}
 {% endblock %}
 
 {% block content %}
+<h3>{% trans "Subjects" %}</h3>
+{% for subject in subjects %}
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <div class="row">
+<div class="col-md-10">
 
-<div class="row">
-		<div class="col-sm-3">
-			<img src="{{ course.image.url }}" class="img-responsive" />
-		</div>
-		<div class="col-sm-9">
-			<h4>{{ course }}</h4>
-			<span class="label label-info">{{ course.category }}</span>
-			<span class="label label-warning">{{ course.max_students }} alunos no máximo</span>
-			<p>
-				<strong>{% trans 'Subscribes:' %} </strong> <em>de</em> <u>{{ course.init_register_date }}</u> <em>até</em> <u>{{ course.end_register_date }}</u>
-			</p>
-			<p>
-				<strong>{% trans 'Period:' %} </strong> <em>de</em> <u>{{ course.init_date }}</u> <em>até</em> <u>{{ course.end_date }}</u>
-			</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<p>
-				<strong>{% trans 'Objectives:' %} </strong> {{ course.objectivies|linebreaks }}
-			</p>
-			<p>
-				<strong>{% trans 'Work Plan:' %} </strong> {{ course.content|linebreaks }}
-			</p>
-		</div>
-	</div>
-	<div class="row">
-      <div class="col-md-12">
-        	<h3>Subjects</h3>
-        	{% for subject in subjects %}
-  		        <div class="panel panel-info">
-		            <div class="panel-heading">
-		              	<h3 class="panel-title">Subject 1</h3>
-		              </div>
-		              <div class="panel-body">
-		                Dummy Info
-		             </div>
-              	</div>
-        	{% endfor %}
+    <h3 class="panel-title"><a href="{% url 'course:view_subject' subject.slug %}"></a>{{subject}}</h3>
+
+  </div>
+  <div class="col-md-2 text-right">
+    {% if user|has_role:'professor, system_admin' %}
+      <a href="{% url 'course:update_subject' subject.slug %}" style="padding: 3px; margin: 3px;" class="btn btn-sm btn-default">
+        <span class="glyphicon glyphicon-edit"></span>
+      </a>
+      <a href="{% url 'course:delete_subject' subject.slug %}" style="padding: 3px; margin: 3px;" class="btn btn-sm btn-danger">
+        <span class="glyphicon glyphicon-trash"></span>
+      </a>
+    {% endif %}
+  </div>
+</div>
+    </div>
+    <div class="panel-body">
+      <p><b>{% trans "Professor" %}: </b>{% for professor in subject.professors.all %}{% if not forloop.first %},{% endif %}
+        {{professor}}{% if forloop.last %}.{% endif %}{% endfor %}</p>
+        <p>
+          <b>{% trans "Description" %}: </b>
+          <i>
+            {{subject.description}}
+          </i>
+        </p>
+        <div class="row">
+          <div class="col-xs-6 col-md-6">
+            {# <p><b>{% trans "Begining" %}: </b>{{subject.init_date}}</p>#}
+          </div>
+          <div class="col-xs-6 col-md-6">
+            {# <p><b>End: </b>23/08/2019</p>#}
+          </div>
         </div>
-      </div>
-
+    </div>
+  </div>
+{% endfor %}
 {% endblock %}
 
+
 {% block rightbar %}
+
 {% endblock rightbar %}
