--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -86,14 +86,24 @@
             	<li> <a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
                 <li> <a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
                 <li> <a href="#">{% trans 'Pending Tasks' %}</a></li>
-                {% if user|has_role:'student' %}
+                {% if user|has_role:'student' and not user.is_staff %}
                 	<li> <a href="#">{% trans 'My courses' %}</a></li>
             	{% endif %}
             	{% if user|has_role:'system_admin' %}
             		<li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
             	{% endif %}
             	{% if user|has_role:'system_admin, professor' %}
-            		<li> <a href="{% url 'course:manage' %}">{% trans 'Manage Courses' %}</a></li>
+            		<li> 
+            			<a href="#courses_list" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
+
+						<div id="courses_list" class="collapse">
+							<ul class="nav nav-pill nav-stacked">
+								{% for course in courses_list %}
+									<li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
+								{% endfor %}
+							</ul>
+						</div>
+					</li>
             	{% endif %}
           	</ul>
     	</div>
