Breadcrumb divide subscrib #25 #52

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -250,3 +250,10 @@ li.alert_li:hover{background-color:#eee}
 .turn_off_alert{float:right;margin-bottom :1px}
 a.alert_message{color : grey}
 a.alert_message:hover{color : grey}
+
+/*=================== Ailson - Please Don't touch*/
+.breadcrumb .divider{
+  display: none;
+}
+
+
