--- a/app/templates/home_teacher_student_content.html
+++ b/app/templates/home_teacher_student_content.html
@@ -1,9 +1,9 @@
-{% load i18n %}
+{% load static i18n %}
 
 {% for notification in objects %}
     <li {% if not notification.read %}class="not_read"{% endif %}>
         <div class="avatar">
-            <img src="{{ notification.user.image.url }}">
+            <img src="{{ notification.user.image_url }}">
         </div>
         <div class="bubble-container">
             <div class="bubble">
