repared some broken links #50

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,7 +5,7 @@
 {% block menu_top %}
 	<ul class="nav navbar-nav">
 		<li class="active">
-			<a href="#">Home</a>
+			<a href="{% url 'home' %}">Home</a>
 		</li>
 		<li><a href="#contact">{% trans 'The Project' %}</a></li>
 		<li><a href="#contact">{% trans 'CCTE Group' %}</a></li>
