--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -48,7 +48,7 @@
 			                  			<span class="icon-bar"></span>
 			                  			<span class="icon-bar"></span>
 			                		</button>
-			                		<a class="navbar-brand" href="javascript:void(0)"><img class="logo" src="{% static 'img/topo-amadeus.png'  %}" alt="Logo"/></a>
+			                		<a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus.png'  %}" alt="Logo"/></a>
 			              		</div>
 			              		<div class="navbar-collapse collapse navbar-responsive-collapse">
 			                		<ul class="nav navbar-nav navbar-right notifications">
