--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -23,7 +23,7 @@
         <div class="panel-body">
         	<ul class="nav nav-pills nav-stacked">
               	<li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
-              	<li><a href="javascript:void(0)">{% trans 'My Courses' %}</a></li>
+              	<li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
               	<li><a href="javascript:void(0)">{% trans 'Google accounts' %}</a></li>
             </ul>
         </div>
