Breadcrumb to manage user page #25 #52

--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -1,16 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 
-{% load i18n pagination %}
+{% load i18n pagination django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-    <div class="row">
-      	<div class="col-md-12">
-        	<ul class="breadcrumb" style="margin-bottom: 5px;">
-          		<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-              	<li class="active">{% trans 'Manage Users' %}</li>
-            </ul>
-      	</div>
-    </div>
+
+  {{ block.super }}
+    {% breadcrumb 'Manage Users' 'users:manage' %}
+
 {% endblock %}
 
 {% block sidebar %}
@@ -68,3 +64,6 @@
         </div>
     {% endif %}
 {% endblock %}
+
+{% block rightbar %}
+{% endblock rightbar %}
